style: fix block container and heading spacing

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -146,8 +146,8 @@
 }
 
 .contact-office {
-  margin-bottom: $space-24px;
-  margin-top: $space-24px;
+  padding-bottom: $space-24px;
+  padding-top: $space-24px;
 
   .section-heading {
     margin: 0;
